extend variables.scss and remove margin-top and apply radius var on TheButton

--- a/src/components/units/TheButton/style.module.scss
+++ b/src/components/units/TheButton/style.module.scss
@@ -2,11 +2,10 @@
 
 .btn {
   min-width: 175px;
-  margin-top: $space;
   padding: 15px 0;
   font-weight: 600;
   line-height: 1;
-  border-radius: 4px;
+  border-radius: $radius;
   cursor: pointer;
   transition: $transition;
 
