--- a/src/layouts/LayoutCard/style.module.scss
+++ b/src/layouts/LayoutCard/style.module.scss
@@ -1,6 +1,16 @@
 @import "./../../variables.scss";
 
 .card {
+  flex-direction: column;
   border: $card;
   border-radius: $radius;
+  margin-top: $space;
+
+  &:first-child {
+    margin-top: 0;
+  }
+
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+  }
 }
