add price sort dropdown input, enhance TopLegend responsive

--- a/src/App.scss
+++ b/src/App.scss
@@ -136,3 +136,8 @@ hr {
 .font-semi-bold {
   font-weight: 600;
 }
+
+.active {
+  color: map-get($colors, white);
+  background-color: map-get($colors, pink);
+}
